# rng-viz

./: .gitignore  LINUX_SETUP.md  PRD.md  README.md  TODO.md  debug_real_app.py  debug_startup.py  demo_directory_creation.py  pyproject.toml  test_directory_creation.py  test_setup.py
rng_viz/: __init__.py  cli.py
rng_viz/analysis/: stats.py
rng_viz/data/: storage.py
rng_viz/device/: __init__.py  truerng.py
rng_viz/ui/: app.py
